# AlifTech-Test-Project

./: README.md  alembic.ini  contacts_repository.py  main.py  pyproject.toml  views.py
alembic/: env.py
alembic/versions/: ba64705b614f_init.py
