[tool.poetry]
name = "alif_tech"
version = "0.1.0"
description = ""
authors = ["FKaraev <farrukhkoarev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = "^0.13.4"
aiosqlite = "^0.17.0"
SQLAlchemy = "1.3.23"
databases = "^0.4.2"
alembic = "^1.5.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
